# ha-resideo

./: .bumpversion.cfg  .gitignore  LICENSE  README.md  hacs.json  pyproject.toml  requirements.test.txt  requirements.txt
.github/workflows/: ci.yml  hacs.yml  release.yml  tests.yml
custom_components/: __init__.py
custom_components/resideo/: __init__.py  binary_sensor.py  climate.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  icons.json  manifest.json  number.py  select.py  sensor.py  strings.json  switch.py
custom_components/resideo/aioresideo/: __init__.py  auth.py  client.py  const.py  exceptions.py  merge.py  stream.py
custom_components/resideo/aioresideo/objects/: __init__.py  account.py  base.py  configuration.py  device.py  events.py  priority.py  rooms.py
docs/: CLIENT.md
tests/: __init__.py
tests/aioresideo/: __init__.py  conftest.py  test_client.py  test_merge.py  test_models.py  test_stream.py
tests/aioresideo/fixtures/: accounts.json  change_request_success.json  configuration.json  cool_setpoint_write.json  device.json  live_displayed_indoor_humidity.json  live_displayed_outdoor_temperature.json  live_fan_switch.json  live_operation_status.json  live_rooms.json  live_sensor_builtin.json  live_sensor_remote.json  live_setpoint.json  live_system_switch.json  rooms.json
tests/resideo/: __init__.py  conftest.py  test_binary_sensor.py  test_climate.py  test_config_flow.py  test_coordinator.py  test_init.py  test_number.py  test_sensor.py  test_switch.py
